--- a/public/coach_dashboard.html
+++ b/public/coach_dashboard.html
@@ -610,13 +610,16 @@
 
     backToDashboardFromStudentsBtn.addEventListener('click', ()=>switchSection(dashboardSection));
 
-    // Init
-    (function init() {
-      const today = new Date();
-      const iso = new Date(today.getTime() - (today.getTimezoneOffset()*60000)).toISOString().slice(0,10);
-      callDateInput.value = iso;
-      recomputeUnits();
-    })();
+    // --- Init
+(function init() {
+  // hide loader at startup
+  hideLoader();
+  const today = new Date();
+  const iso = new Date(today.getTime() - (today.getTimezoneOffset()*60000)).toISOString().slice(0,10);
+  callDateInput.value = iso;
+  recomputeUnits();
+})();
+
   </script>
 </body>
 </html>
