--- a/public/coach_dashboard.html
+++ b/public/coach_dashboard.html
@@ -678,17 +678,52 @@
             throw new Error('Student not found.');
           }
           const info = resp.studentInfo;
-          let tableHtml = `<div class="overflow-x-auto"><table class="w-full text-sm"><tbody>`;
+          const calls = info.calls || [];
+          delete info.calls;
+
+          // Render static student details
+          let detailsHtml = `<h3 class="text-xl font-semibold text-gray-800 mb-4">Student Details</h3><div class="overflow-x-auto mb-6"><table class="w-full text-sm"><tbody>`;
           for (const [key, value] of Object.entries(info)) {
-            tableHtml += `
+            detailsHtml += `
               <tr class="border-b">
                 <td class="py-3 px-4 font-semibold text-gray-700">${key.replace(/([A-Z])/g, ' $1').trim()}</td>
                 <td class="py-3 px-4 text-gray-600">${value}</td>
               </tr>
             `;
           }
-          tableHtml += `</tbody></table></div>`;
-          studentDetailsContainer.innerHTML = tableHtml;
+          detailsHtml += `</tbody></table></div>`;
+
+          // Render call history table
+          detailsHtml += `<h3 class="text-xl font-semibold text-gray-800 mb-4">Call History</h3><div class="overflow-x-auto rounded-xl shadow-lg border border-gray-200">`;
+          if (calls.length === 0) {
+            detailsHtml += `<p class="p-4 text-gray-500 text-center">No calls found for this student.</p>`;
+          } else {
+            detailsHtml += `<table class="min-w-full bg-white text-sm">
+                              <thead>
+                                <tr class="bg-gray-200 text-gray-600 uppercase text-xs leading-normal">
+                                  <th class="py-3 px-6 text-left">Date</th>
+                                  <th class="py-3 px-6 text-left">Allocation ID</th>
+                                  <th class="py-3 px-6 text-left">Units</th>
+                                  <th class="py-3 px-6 text-left">Rate</th>
+                                  <th class="py-3 px-6 text-left">Earnings</th>
+                                </tr>
+                              </thead>
+                              <tbody class="text-gray-600 text-sm font-light">`;
+            calls.forEach(call => {
+              detailsHtml += `
+                <tr>
+                  <td class="py-3 px-6 text-left">${call.date || ''}</td>
+                  <td class="py-3 px-6 text-left">${call.allocationId || ''}</td>
+                  <td class="py-3 px-6 text-left">${call.units || ''}</td>
+                  <td class="py-3 px-6 text-left">${Number(call.rate).toFixed(2) || ''}€</td>
+                  <td class="py-3 px-6 text-left">${Number(call.earnings).toFixed(2) || ''}€</td>
+                </tr>
+              `;
+            });
+            detailsHtml += `</tbody></table>`;
+          }
+          detailsHtml += `</div>`;
+          studentDetailsContainer.innerHTML = detailsHtml;
 
         } catch (err) {
           studentDetailsContainer.innerHTML = `<p class="text-red-500 text-center">${err.message}</p>`;
