--- a/public/coach_dashboard.html
+++ b/public/coach_dashboard.html
@@ -725,15 +725,64 @@
                     // Then, render the other details in a table
                     detailsHtml += `<h3 class="text-xl font-semibold text-gray-800 mb-4">Student Details</h3><div class="overflow-x-auto mb-6"><table class="w-full text-sm"><tbody>`;
                     for (const [key, value] of Object.entries(info)) {
-                        if (!hiddenFields.includes(key) && !linkFields[key]) {
-                            detailsHtml += `
-                                <tr>
-                                    <td class="py-3 px-6 font-medium text-gray-700 whitespace-nowrap">${key}</td>
-                                    <td class="py-3 px-6 text-gray-800">${value || 'N/A'}</td>
-                                </tr>
-                            `;
-                        }
-                    }
+    if (!hiddenFields.includes(key) && !linkFields[key]) {
+
+        // Phone → WhatsApp
+        if (key === 'Phone' && value && value !== 'N/A') {
+            const cleanNumber = value.replace(/\D/g, '');
+            detailsHtml += `
+                <tr>
+                    <td class="py-3 px-6 font-medium text-gray-700 whitespace-nowrap">${key}</td>
+                    <td class="py-3 px-6 text-blue-600">
+                        <a href="https://wa.me/${cleanNumber}" target="_blank" class="underline hover:text-blue-800">
+                            ${value}
+                        </a>
+                    </td>
+                </tr>
+            `;
+            continue;
+        }
+
+        // Status → badge colorato
+        if (key === 'Status') {
+            const statusColor = value === 'Active'
+                ? 'bg-green-100 text-green-800'
+                : 'bg-red-100 text-red-800';
+            detailsHtml += `
+                <tr>
+                    <td class="py-3 px-6 font-medium text-gray-700 whitespace-nowrap">${key}</td>
+                    <td class="py-3 px-6">
+                        <span class="px-3 py-1 rounded-full text-xs font-semibold ${statusColor}">
+                            ${value}
+                        </span>
+                    </td>
+                </tr>
+            `;
+            continue;
+        }
+
+        // Start Date → solo yyyy-MM-dd
+        if (key === 'Start Date' && value && value !== 'N/A') {
+            const cleanDate = value.split('T')[0];
+            detailsHtml += `
+                <tr>
+                    <td class="py-3 px-6 font-medium text-gray-700 whitespace-nowrap">${key}</td>
+                    <td class="py-3 px-6">${cleanDate}</td>
+                </tr>
+            `;
+            continue;
+        }
+
+        // Default
+        detailsHtml += `
+            <tr>
+                <td class="py-3 px-6 font-medium text-gray-700 whitespace-nowrap">${key}</td>
+                <td class="py-3 px-6 text-gray-800">${value || 'N/A'}</td>
+            </tr>
+        `;
+    }
+}
+
                     detailsHtml += `</tbody></table></div>`;
 
                     // Render call history table
@@ -756,7 +805,7 @@
 
                     let contentHtml = '';
                     if (buttonsHtml.length > 0) {
-                        contentHtml += `<div class="mb-6"><h3 class="text-xl font-semibold text-gray-800 mb-4">Link Utili</h3><div class="flex flex-wrap gap-4">${buttonsHtml}</div></div>`;
+                        contentHtml += `<div class="mb-6"><h3 class="text-xl font-semibold text-gray-800 mb-4">Useful Links</h3><div class="flex flex-wrap gap-4">${buttonsHtml}</div></div>`;
                     }
                     contentHtml += detailsHtml;
 
