--- a/public/coach_dashboard.html
+++ b/public/coach_dashboard.html
@@ -835,6 +835,11 @@
                 switchSection(callSection);
                 loadStudentIds(); // popola la tendina degli studenti
             });
+
+            // --- Back to Dashboard (dal call form)
+            backToDashboardBtn.addEventListener('click', () => {
+                switchSection(dashboardSection);
+            });
             
             backToDashboardFromStudentsBtn.addEventListener('click', () => {
                 switchSection(dashboardSection);
