--- a/public/coach_dashboard.html
+++ b/public/coach_dashboard.html
@@ -245,9 +245,10 @@
                 <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 sm:mb-0">Report Cards</h2>
                 <button id="backToDashboardFromReportsBtn" class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg transition duration-300 ease-in-out hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-300 focus:ring-opacity-50">Back to Dashboard</button>
             </div>
-            <div class="text-center p-8 border-2 border-dashed border-gray-300 rounded-xl text-gray-500">
-                Report Cards functionality will be added here.
-            </div>
+            <div id="reportCardsContainer" class="space-y-4 text-gray-700">
+            <p class="text-gray-500 text-center">Loading report card tasks...</p>
+        </div>
+
         </div>
 
         <!-- Modal -->
@@ -276,6 +277,7 @@
             const studentsSection = document.getElementById('studentsSection');
             const callHistorySection = document.getElementById('callHistorySection');
             const reportCardsSection = document.getElementById('reportCardsSection');
+            const reportCardsContainer = document.getElementById('reportCardsContainer');
 
             const logCallBtn = document.getElementById('logCallBtn');
             const viewStudentsBtn = document.getElementById('viewStudentsBtn');
@@ -645,6 +647,40 @@
                 renderHistoryTable(monthFilterSelect.value);
             });
 
+async function loadReportCardTasks() {
+    reportCardsContainer.innerHTML = '<p class="text-gray-500 text-center">Loading report card tasks...</p>';
+    try {
+        const resp = await apiGet('getReportCardTasks', { coachId: CURRENT_COACH_ID });
+        if (!resp.success) throw new Error(resp.error || 'Unable to load tasks.');
+
+        const tasks = resp.tasks || [];
+        if (tasks.length === 0) {
+            reportCardsContainer.innerHTML = '<p class="text-gray-500 text-center">No report cards due this month 🎉</p>';
+            return;
+        }
+
+        let html = '<div class="grid gap-4">';
+        tasks.forEach(t => {
+            html += `
+                <div class="p-4 bg-white rounded-xl shadow border border-gray-200">
+                    <h3 class="text-lg font-semibold text-gray-800">${t.name} ${t.surname} (${t.studentId})</h3>
+                    <p class="text-gray-600"><strong>Recurrency:</strong> ${t.recurrency}</p>
+                    <p class="text-gray-600"><strong>Calls this month:</strong> ${t.calls}</p>
+                    <button class="mt-3 bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">
+                        Write Report
+                    </button>
+                </div>
+            `;
+        });
+        html += '</div>';
+        reportCardsContainer.innerHTML = html;
+
+    } catch (err) {
+        reportCardsContainer.innerHTML = `<p class="text-red-500 text-center">Error: ${err.message}</p>`;
+    }
+}
+
+            
             // --- Student Section Logic
             async function loadStudentsDropdown() {
                 studentSelect.innerHTML = '<option value="" disabled selected>Loading students...</option>';
@@ -843,8 +879,11 @@
                 switchSection(dashboardSection);
             });
             viewReportCardsBtn.addEventListener('click', () => {
+                if (!CURRENT_COACH_ID) return;
                 switchSection(reportCardsSection);
+                loadReportCardTasks();
             });
+
         </script>
     </div>
 </body>
