--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -127,6 +127,8 @@
                 <h1 class="text-3xl md:text-4xl font-bold text-gray-800">Log a new call</h1>
                 <p class="mt-2 text-gray-500">Logged in as <span class="font-bold text-blue-600" id="callSectionCoachNameDisplay"></span>.</p>
             </div>
+<label><input type="radio" name="callType" value="IND" checked> IND</label>
+<label><input type="radio" name="callType" value="GROUP"> GROUP</label>
 
             <form id="callForm" class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-8">
                 <!-- hidden -->
